<resources>
    <string name="app_name">Mandelbrot</string>

    <string name="description_static_background">static background to stop zooming of fractal view revealing the brick wall at the back of theatre</string>
    <string name="description_static_foreground">static foreground used to animate changes to main RenderCanvas</string>
    <string name="description_film_grain">film grain to give fractal some texture</string>
    <string name="description_gesture_overlay">static overlay used to listed for gestures</string>
    <string name="description_palette_swatch">palette swatch</string>
    <string name="description_palette_swatch_selected">palette swatch selected</string>
    <string name="description_gesture_icon">icon that indicates gestures are being attempted but are being blocked</string>

    <string name="action_palette">Palette</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save Image</string>
    <string name="action_reset">Reset Coordinates</string>
    <string name="action_redraw">Redraw</string>
    <string name="action_toggle_info_pane">Toggle Info Pane</string>

    <string name="settings_action_reset">Reset</string>
    <string name="settings_max_iterations_label">Maximum Iterations</string>
    <string name="settings_bailout_label">Bailout Value</string>
    <string name="settings_doubletap_label">Double-Tap Scale</string>
    <string name="settings_num_passes_label">Number of Passes</string>

    <string name="settings_iterations_rate_label">Iterations (rate of increase)</string>
    <string name="settings_iterations_rate_fast">Fast</string>
    <string name="settings_iterations_rate_normal">Normal</string>
    <string name="settings_iterations_rate_slow">Slow</string>

    <string name="settings_rendermode_label">Render Mode</string>
    <string name="settings_rendermode_hardware">Hardware</string>
    <string name="settings_rendermode_topdown">Top/Down (software)</string>
    <string name="settings_rendermode_centre">Centre/Out (software)</string>
    <string name="settings_rendermode_simplest">Simplest</string>

    <string name="settings_orientation_label">Screen Orientation</string>
    <string name="settings_orientation_portrait">Portrait</string>
    <string name="settings_orientation_sensor">Auto-rotate</string>

    <string name="settings_deep_colour">Use Deep Colour</string>

    <string name="palette_smoothness_label">Smoothness</string>

    <string name="action_save_success">Image Saved</string>
    <string name="action_save_fail">Error Saving Image</string>
    <string name="action_save_no_permission">Can\'t save image - no permission</string>

    <string name="scale_limit_reached">Scaling limit reached!</string>

    <string name="dialog_ok">Done</string>
    <string name="dialog_more">More Settings</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_default">Default</string>

    <string name="error_ui_alert">* ERROR *</string>

    <!-- string used by Mandelbrot().toString() - formatted with String.format() -->
    <string name="mandelbrot_info_string">
yu: %1$f\n
xl: %2$f\n
xr: %3$f\n
yl: %4$f\n
pixel scale: %5$e\n
iterations: %6$d\n
zoom (1x): %7$.1f\n
    </string>
</resources>
