<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:canvas=".MainActivity">

    <item
        android:id="@+id/action_palette"
        android:title="@string/action_palette"
        android:icon="@drawable/ic_palette_24dp"
        app:showAsAction="ifRoom"
    />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings_24dp"
        app:showAsAction="ifRoom"
    />

    <item
        android:id="@+id/action_save"
        android:title="@string/action_save"
        app:showAsAction="never"
    />

    <item
        android:id="@+id/action_reset"
        android:title="@string/action_reset"
        app:showAsAction="never"
    />

    <item
        android:id="@+id/action_redraw"
        android:title="@string/action_redraw"
        app:showAsAction="never"
    />

</menu>

